# gitgrit

./: .coverage  .env.example  .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.full.yaml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.claude-plugin/: marketplace.json
.github/: cla-signatures.json  copilot-instructions.md
.github/workflows/: ci.yml  cla.yml  plugin-tag.yml  publish.yml
.kamal/hooks/: docker-setup  post-deploy
app/: admin.py  apps.py  context_processors.py  models.py  signals.py  tasks.py  urls.py
app/application/: api_token_service.py  dependency_agent.py  edit_validator.py  event_bus.py  naming.py  policy_engine.py  policy_service.py  project_service.py  project_status_service.py  stack_service.py  subscribers.py
app/domain/: events.py  identity.py  models.py  policies.py  policy_criteria.py  policy_extractor.py  policy_runner.py  policy_validator.py
app/infrastructure/: encryption.py  llm_agent.py  llm_models.py  model_fields.py  platform_client.py  webhook_signatures.py
app/migrations/: 0001_initial.py  0007_add_policy_test_cases.py  0008_add_policy_labels.py  0009_marketplace.py  0009_project_owner.py  0010_policy_versioning.py  0010_project_owner_to_charfield.py  0011_execution_triggered_by_user.py  0012_merge_marketplace_and_project_owner.py  0013_add_api_token.py  0014_apitoken_client_kind.py  0015_alter_platformconnection_access_token.py  0016_feedbackreport.py  0017_llmprovider_llmrole.py  0018_policyexecution_logs.py  0019_stackdependency.py  0020_projectdependency.py  0021_externaldependency.py  0022_project_deps_analyzed_at_project_deps_error_and_more.py  0023_remove_externaldependency_unique_external_dependency_and_more.py  0024_project_inferred_technologies.py  0025_infrastructurecomponent.py
app/presentation/: architecture.py  health.py  urls.py  web_urls.py
app/templates/: base.html
app/templatetags/: project_tags.py
config/: deploy.yml
django/: docker-compose.yml  manage.py  pyproject.toml
django/app/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
django/gitgud/: asgi.py  settings.py  urls.py  wsgi.py
django/sandbox_image/: Dockerfile  entrypoint.py  project_context.py
docs/: airgap-test-plan.md  airgap.md
docs/architecture/: closed-loop-readiness.md  new-user-connection-flow.md  plugin-flow.md
gitgrit/: asgi.py  middleware.py  settings.py  settings_test.py  test_runner.py  urls.py  wsgi.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/commands/: gitgrit-check.md  gitgrit-refresh.md  gitgrit-status.md
plugin/hooks/: hooks.json
plugin/scripts/: enforce-check.sh  session-init.sh
sandbox_image/: Dockerfile  entrypoint.py  llm.py  policy_log.py  project_context.py
sandbox_image/providers/: base.py  factory.py  github.py  gitlab.py  mock.py
scripts/: build-airgap-bundle.sh  make_client_repo.sh  mcp_smoke_test.py  plugin_scenario.py  vendor-fonts.sh
site/: README.md  mkdocs.yml  pyproject.toml
site/docs/: index.md  robots.txt
site/overrides/: home.html  main.html
tests/: test_sandbox_llm.py  test_template_filters.py
tests/api/: test_projects.py  test_setup_endpoint.py  test_webhooks.py
tests/application/: test_dependency_agent.py  test_edit_validator.py  test_event_bus.py  test_policy_service_active_for_project.py  test_project_service_normalize.py  test_project_service_resolve.py  test_project_status_service.py  test_recover_stalled_jobs.py
(+203 files in other folders)
