[project]
name = "gitgrit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-allauth[socialaccount]>=65.14.3",
    "django-htmx>=1.27.0",
    "djangorestframework>=3.16.1",
    "docker>=7.0",
    "gunicorn>=23.0",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.0",
]

[dependency-groups]
dev = [
    "model-bakery>=1.20",
    "poethepoet>=0.34",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "testcontainers[postgres]>=4.9",
]

[tool.poe.tasks]
sandbox = { cmd = "docker build -t gitgrit-sandbox:latest sandbox_image/", help = "Build the sandbox Docker image" }
dev = { cmd = "python manage.py runserver", help = "Run the development server" }
test = { cmd = "python manage.py test", help = "Run tests" }
migrate = { cmd = "python manage.py migrate --noinput", help = "Apply database migrations" }
makemigrations = { cmd = "python manage.py makemigrations", help = "Create new migrations" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gitgrit.settings_test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
